--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,8 @@
 include README.md
+include LICENSE
+include CHANGELOG.md
+include pyproject.toml
+recursive-include bluesky_social *.py
+recursive-include tests *.py
+global-exclude __pycache__
+global-exclude *.py[co]
